syntax = "proto3";

// export PATH="$PATH:$(go env GOPATH)/bin"
// go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative src/proto/chat.proto

package chat;
option go_package = "./chat";

message Message {
string text = 1;
int32 chatID = 2;
}

message Status {
bool isSuccessful = 1;
}

message FileUploadRequest {
    int32 chatID = 1;
    string text = 2;
    string mimetype = 3;
    bytes chunk = 4;
}
message FileUploadResponse {
  string file_name = 1;
  uint32 size = 2;
}

service BotChat {
rpc StartChatTG(stream Message) returns (stream Message);
rpc StartChatVK(stream Message) returns (stream Message);
rpc UploadAttachesTG(stream FileUploadRequest) returns(FileUploadResponse);
}